--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=f6RC5B7Hh4pvbieCGNR8opnvthbHH2VV"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
